fix .post on mobile

--- a/_scss/_blog.scss
+++ b/_scss/_blog.scss
@@ -55,8 +55,6 @@
 
 .post {
 
-  @include container($container-padding);
-  
   @media (min-width: $reference-width-md-until) {
     main {
       display: flex;
